Add links to references

--- a/PSet5-A.Rmd
+++ b/PSet5-A.Rmd
@@ -217,4 +217,4 @@ ggplot() +
 
 We chose four years (1990, 2000, 2010, 2018) to check the locations of conflict for this problem set. As shown in the map plots above, the rough geometrical distribution of the conflicts seems to have little changes. Most of the conflicts in all of those four years took place in Latin America, Africa, the Middle East, South Asia, and the Philippines.
 
-However,  if we take a look closely, the location patterns still have some changes across the years. For example, Mexico had only a few conflicts in 2000, but in 2010 and 2018, its numbers of conflicts increased. Another example, the number of conflicts in  Sri Lanka decreased when comparing its numbers in 1990/2000 with the numbers 2010/2018, which is probably a result of the end of the Sri Lankan Civil War in 2009.
+However,  if we take a look closely, the location patterns still have some changes across the years. For example, Mexico had only a few conflicts in 2000, but in 2010 and 2018, its numbers of conflicts increased. Another example, the number of conflicts in  Sri Lanka decreased when comparing its numbers in 1990/2000 with the numbers 2010/2018, which is probably a result of the end of the [Sri Lankan Civil War](https://en.wikipedia.org/wiki/Sri_Lankan_Civil_War) in 2009.
