--- a/Results.Rmd
+++ b/Results.Rmd
@@ -159,7 +159,7 @@ Most conflict events are state-based conflict, i.e., the conflict involved with 
 
 If you are interested in the detailed and formal definition of these three types of conflict, please refer to this [source](https://ucdp.uu.se/downloads/ged/ged191.pdf), pp. 28-31.
 
-
+We want to check further how many civilians deaths each year, compare to the deaths of non-civilians caused by conflicts.
 
 ```{r, fig.width=10, fig.height=3.8}
 library(tidyverse)
@@ -250,5 +250,7 @@ ttt <- df_process %>%
 df_3 <- head(ttt[order(-ttt$deaths_civilians),], 10)[c("id", "side_a", "side_b", "year", "deaths_civilians", "country")]
 knitr::kable(df_3)
 ```
+
+From the above plots, the top-left one, we can see that there are large civilians death in conflicts happened in 1994, which potentially because of the Rwanda genocide; after removing the records regarding the Rwanda genocide, the civilian deaths in 1994 was similar with other years. 
 
 The bottom two plots show the proportion of civilian deaths caused by conflicts, by comparing the left and right plots, we can see that the Rwanda genocide is the reason of leading extreme high proportion of civilian deaths.  In most of the years, the percentage of civilian deaths is around 25%, except in the year 1994 and the year 1996. After further checking, the reason for the high proportion of civilian deaths in 1996 is probably due to the [First Congo War](https://en.wikipedia.org/wiki/First_Congo_War).
