--- a/Missing_values.Rmd
+++ b/Missing_values.Rmd
@@ -16,7 +16,7 @@ library(naniar)
 library(extracat)
 ```
 
-# IV. Missing patterns
+# Missing patterns
 
 There are 152616 rows in the dataset, and the following outputs are the number of rows missing for the specific variable. We do not need to know the detailed explanations of each variable at the current stage, the descriptions of certain variables are included in the previous Section III. For the full explanations of each variable, please refer to the [codebook](https://ucdp.uu.se/downloads/ged/ged191.pdf).
 
