--- a/Data_transformation.Rmd
+++ b/Data_transformation.Rmd
@@ -38,7 +38,7 @@ save(df_process, file = here("data", "clean", "df_process.RData"))
 write.csv(df_process, file = here("data", "clean", "df_process.csv"))
 ```
 
-In our study, we find the most extreme values of this dataset are related to the [Rwanda genocide](https://en.wikipedia.org/wiki/Rwandan_genocide) in 1994, which we will have detailed explanations in the following sections. Sometimes, we need to include these records in our analysis, and sometimes we don't. Therefore, we decide to have a data frame to record the unique conflict event ID of records related to the Rwanda genocide. Then we can quickly include and filter our these records in our future coding. The data frame is stored as "data/clean/df_rwa.RData".
+In our study, we find the most extreme values of this dataset are related to the [Rwanda genocide](https://en.wikipedia.org/wiki/Rwandan_genocide) in 1994, which we will have detailed explanations in the following chapters. Sometimes, we need to include these records in our analysis, and sometimes we don't. Therefore, we decide to have a data frame to record the unique conflict event ID of records related to the Rwanda genocide. Then we can quickly include and filter our these records in our future coding. The data frame is stored as "data/clean/df_rwa.RData".
 
 For other transformations made for analysis and visualization, please refer to our code on GitHub [repo](https://github.com/tonyytliu/edav_final_project).
 
