--- a/Data_source.Rmd
+++ b/Data_source.Rmd
@@ -11,7 +11,7 @@ There are 152616 recordes in the dataset, and each record in the dataset is an e
 
 To avoid potential ambiguities, "conflict event" is used in our project to express the term "event" in the original terminology. This dataset contains data of armed conflict events from a world-wide perspective, from 1989 to 2018; includes the time, geographic location, type, casualties, and other information regarding the conflict event. 
 
-There are a total of 43 variables in the original dataset, and the full definition and explanation of variables, please refer to the dataset's codebook [[source](https://ucdp.uu.se/downloads/ged/ged191.pdf)]. However, there are some repeated variables. For example, there are several variables to represent the geo-location of one conflict event, they refer to the same location, but in different formats to suit different geographic databases. In our study, for the location variables, we are only interested in the vanilla `latitude` and `longitude` variables.
+There are a total of 43 variables in the original dataset, and for the full definitions and explanations of variables, please refer to the dataset's codebook [[source](https://ucdp.uu.se/downloads/ged/ged191.pdf)]. However, there are some repeated variables. For example, there are several variables to represent the geo-location of one conflict event, they refer to the same location, but in different formats to suit different geographic databases. In our study, for the location variables, we are only interested in the vanilla `latitude` and `longitude` variables.
 
 For the propose of analyzing conflicts' data patterns in this project, we mostly focus on a subset of variables; the following are the variables and their explanations. Explanations are referred from the codebook of the dataset [[source](https://ucdp.uu.se/downloads/ged/ged191.pdf)].
 
