--- a/Interactive.Rmd
+++ b/Interactive.Rmd
@@ -1,5 +1,27 @@
 ---
-title: "Interactive"
+title: "interactive"
 output: html_document
 ---
-<iframe src="map.html" width="1200" height="900"></iframe>
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+# Interactive
+
+This is the interactive part of our conflict anaylsis. 
+We store the data in out github repo (https://github.com/sunyiyangallan/Conflict-Map) and ged191.csv is the original file, and we cleaned up that file and get df_d3.csv using R (as mentioned in the previous chapters).
+
+Please click [this link](https://bl.ocks.org/sunyiyangallan/raw/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1/) to view our interactive plot (https://bl.ocks.org/sunyiyangallan/raw/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1/). It may take sometime to load the plot. 
+
+The D3 [code]((https://bl.ocks.org/sunyiyangallan/13bed51f18a1e4f2e0834f5ef52ee637/69016912fdce8e3749809507d6a58d2e6638fab1)) is also uploaded to blockbuilder.org
+
+The total numbers of deaths every year and every country are calculated using D3. 
+
+Instructions for using the plot: 
+
+1. The plot may take a few seconds to initialize. The plot is initialized with a mapping of conflicts in the year of 2018 with no default country specified on the "earth". 
+2. Users can choose the country of their interests by choosing from the select bar on the top left. After selection, then on the top right part, there will be a text displaying the country name, the year, and the total death that year. If the country has at least one conflict during 1989 - 2018, there will be a bar chart showing up in the bottom. 
+3. Users can drag the "earth" if they want, if they hover the mouse over the land, the country name will be displayed. 
+4. Users can select the year of interest on the top left part of the plot. If a different year is chosen, the circles will be redrawn, so please be patient. 
+5. The total number of death is calculated using the "best" column in the dataset, which means the best estimate of the number of death. 
+6. The dataset does not contain data from Syria. Therefore, conflict data in Syria is currently unavailable.
